--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,2 +1,7 @@
-<h1>404 Error</h1>
-<h2>This route does not exist on the app! Check if everything is ok!</h2>
+<h1 class="not-found-h1">
+  4
+  <img src="/images/404.png" alt="0" width="60">
+  4
+</h1>
+<h2>Page not found</h2>
+<p>If you continue to see this page, please contact us at JFCinema2019@gmail.com</p>
