--- a/views/profile/edit-password.hbs
+++ b/views/profile/edit-password.hbs
@@ -20,6 +20,7 @@
   {{/if}}
 
   <button id="changePassword" disabled>Confirm change</button>
+  <button><a href="/profile/edit">cancel</a></button>
 </form>
 
 {{!-- tippy.js scripts starts --}}
