--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -2,6 +2,7 @@
 <button><a href="/profile/edit/username">edit username</a></button>
 <button><a href="/profile/edit/password">edit password</a></button>
 <button><a href="/profile/edit/email">edit email</a></button>
+<button><a href="/profile">back to profile</a></button>
 
 {{#if messagePos}}
 <div class="message-pos">{{messagePos}}</div>
