--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -169,8 +169,8 @@ footer a img {
 .screeningDatePick {
   margin: 5px;
   padding: 5px;
-  background-color: #0f5e0f;
-  color: white;
+  background-color: #272727;
+  color: #e9e8e8;
   border-radius: 5px;
   display: inline-block; }
 
@@ -388,9 +388,27 @@ progress {
 #changePassword:disabled {
   background-color: grey; }
 
-.profile-ticket-overview:nth-child(2) {
-  background-color: red;
-  color: white; }
+.profile-ticket-overview {
+  display: flex;
+  background-color: black;
+  margin-bottom: 10px; }
+
+.profile-ticket-img {
+  width: 50px;
+  height: 100%;
+  margin: 10px; }
+
+.profile-tickets-movie-title {
+  color: #FE4A28; }
+
+.profile-tickets-movie-seats {
+  margin: 0 0 0 10px; }
+
+.profile-tickets-movie-seats:last-child {
+  margin-bottom: 10px; }
+
+.profile-tickets-mobile {
+  display: inline-block; }
 
 .price {
   display: inline;
@@ -425,6 +443,9 @@ progress {
 
 fieldset {
   border: 0; }
+
+.not-found-h1 {
+  font-size: 70px; }
 
 @media screen and (min-width: 701px) {
   header {
