--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -1,4 +1,4 @@
-<h2>Hello {{user.username}}</h2><br><br>
+<h1>Hello {{user.username}}</h1>
 
 {{!-- Status messages for creating cinema, screening, movie --}}
 {{#if messagePos}}
@@ -8,6 +8,7 @@
 <div class="error-message">{{message}}</div>
 {{/if}}
 
+<h2>Cinema overview</h2>
 {{#each cinemas}}
 <div>
   <div style="font-size:20px;">{{name}}</div>
@@ -18,7 +19,7 @@
 </div><br>
 {{/each}}
 
-<hr>
+<h2>Add new properties</h2>
 <div>
   <button class="admin-button"><a href="/admin/add-cinema">add a new cinema</a></button>
   <button class="admin-button"><a href="/admin/add-movie">add a new movie</a></button>
