--- a/views/admin/movie-to-add.hbs
+++ b/views/admin/movie-to-add.hbs
@@ -1,10 +1,11 @@
+<h1>Add a new movie</h1>
 <h2>Get information</h2>
 {{!-- <form action="/admin/add-movie/checkprefill" method="POST"> --}}
 
 <label for="title">Title:</label>
 <input type="text" name="title" id="inputPrefillMovie" required>
 <br><br>
-<button id="buttonPrefillMovie">Check prefill</button>
+<button id="buttonPrefillMovie">check prefill</button>
 {{!-- </form> --}}
 
 <h2>Adding movie</h2>
@@ -36,7 +37,7 @@
 </select>
 <img id="movieImg">
 <br><br>
-<button type="submit">Add this movie</button>
+<button type="submit">add this movie</button>
 </form>
 
 <script src="/javascripts/moment.js"></script>
