--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -28,7 +28,7 @@
   </p>
 </form>
 
-{{!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>--}}
-<script src="https://unpkg.com/popper.js@1"></script>
+{{!-- For tippy library --}}
+<script src="https://unpkg.com/popper.js@1"></script> 
 <script src="https://unpkg.com/tippy.js@4"></script>
 <script src="/javascripts/auth.js"></script>
