--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,7 +1,4 @@
-<h1 class="not-found-h1">
-  4
-  <img src="/images/404.png" alt="0" width="60">
-  4
-</h1>
+<h1 class="not-found-h1">4<img src="/images/404.png" alt="0" width="60">4</h1>
+
 <h2>Page not found</h2>
 <p>If you continue to see this page, please contact us at JFCinema2019@gmail.com</p>
