--- a/views/profile/edit-password.hbs
+++ b/views/profile/edit-password.hbs
@@ -12,7 +12,6 @@
       <input id="new-password" type="password" name="newPassword" required>
       <progress id="strength" max="100" value="0"></progress><span id="strong-or-weak"></span>
     </div>
-
   </div>
 
   {{#if message }}
@@ -26,5 +25,5 @@
 {{!-- tippy.js scripts starts --}}
 <script src="https://unpkg.com/popper.js@1"></script>
 <script src="https://unpkg.com/tippy.js@4"></script>
-{{!-- tippy.js scripts starts --}}
+{{!-- tippy.js scripts ends --}}
 <script src="/javascripts/edit-password.js"></script>
