--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,6 +179,19 @@ footer a img {
   border-radius: 5px;
   display: inline-block; }
 
+.screeningDatePickGlide {
+  background-color: #B5E5BF;
+  color: black;
+  margin: 5px;
+  padding: 8px;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer; }
+
+.screeningSelectedDate {
+  background-color: #FE4A28;
+  color: #e9e8e8; }
+
 .screening-poster {
   max-height: 250px;
   max-width: 150px; }
