--- a/views/tickets/confirmation.hbs
+++ b/views/tickets/confirmation.hbs
@@ -3,6 +3,7 @@
 <div id="reservation-confirmation">
   <div class="ticket-div-info">
     <div class="ticket-div">
+      <p><i>Your tickets have been sent to your e-mailaddress</i></p>
       <h2>Your name:</h2>
       <p>{{username}}</p>
       <h2>Cinema:</h2>
